# swm-python-client

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  openapi-python-client.yaml  pyproject.toml  requirements.in  requirements.txt  setup.py  update-openapi.sh
scripts/: cancel-job.py  get-flavors.py  get-job.py  get-jobs.py  get-nodes.py  get-output.py  get-remote-sites.py  requeue-job.py  submit-job.py
swmclient/: api.py  connection.py
